=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.018 - Under Development

=over

=item *

Fixed a bug where previewing/publishing zero-length stories caused an
error.  [Peter]

=back

=head2 v1.017 - April 29, 2004

=over

=item *

Fixed a bug where C<tmpl_include> calls in templates weren't correctly
searching the category tree in all cases. [Matt]

=item *

Modified Krang::Widget::category_chooser() to take into account
category permissions when building the category chooser.  Also took
advantage of the multiple-root support in HTML::PopupTreeSelect 1.4 to
remove to empty root node from the widget.  [Sam]

=item *

Upgraded HTML::PopupTreeSelect to the latest released version,
1.4. [Sam]

=item *

Fixed a bug in Krang::Group where the category permissions cache
wasn't being correctly rebuilt after group changes were saved. [Sam]

=item *

Added filesystem sanity checks to the Publish checks - If the
story/media object being tested does not exist on the filesystem in
all locations that it should, it's flagged for output, regardless of
versioning.  Also cleaned up some unneeded API cruft.  [Peter]

=item *

Large changes to the publishing engine.  When publishing/previewing a
story, Krang::Publisher will now check all related stories/media to
see if the most recent version of each object has been
published/previewed before.  If so, the object will not be
published/previewed again.  The chosen story/media object will always
be published/previewed.  This is only default behavior in the UI,
scheduled publish jobs and bin/krang_publisher still publish all
content.  Additional parameters have been added to the
Krang::Publisher API to support this functionality, see
L<Krang::Publisher> for more information.  [Peter]

=item *

Fixed bug in Krang::Contrib where importing a contributor with no
first name or no last name would duplicate the contributor if it
already existed instead of updating. [Sam]

=item *
