@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added code to generate HTML documentation for the scripts in
+F<bin/>. [Sam]
+
+=item *
+
 Fixed a bug where previewing/publishing zero-length stories caused an
 error.  [Peter]
 
